Fix : NoticeMini - overflow: hidden; 속성 재 적용

--- a/src/component/AboutHome/NoticeMini.module.css
+++ b/src/component/AboutHome/NoticeMini.module.css
@@ -36,6 +36,7 @@
   -webkit-line-clamp: 1; /* 표시할 줄 수 */
   -webkit-box-orient: vertical;
   text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .view_all {
